[package]
name = "Sandbox"
version = "0.1.0"
authors = ["SangHyeok Hong <tkdgur4427@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.25.0"
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
wgpu = "0.8"
futures = "0.3"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"
tobj = "3.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
